Update and rename child_safety_standalone.html to child_safety.html

--- a/child_safety.html
+++ b/child_safety.html
@@ -236,7 +236,7 @@
                 <li>The in-app reporting feature on any user profile</li>
                 <li>Email our safety team directly</li>
             </ul>
-            <a href="mailto:safety@meeplr.com?subject=Child%20Safety%20Concern" class="email-link">
+            <a href="mailto:caitlyn.c.nayeli@gmail.com?subject=Child%20Safety%20Concern" class="email-link">
                 📧 Report Safety Concern
             </a>
             <p style="margin-top: 15px;">Your report will be reviewed within 24 hours and appropriate action will be taken.</p>
@@ -255,11 +255,11 @@
         
         <div class="warning-box" style="margin-top: 30px;">
             <h2 style="color: #856404; margin-top: 0;"><span class="warning-icon">👨‍👩‍👧</span> For Parents and Guardians</h2>
-            <p>If you discover that a minor has created an account on Meeplr, please contact us immediately at <a href="mailto:safety@meeplr.com" style="color: #856404; text-decoration: underline;">safety@meeplr.com</a> so we can take swift action to remove the account and prevent future access.</p>
+            <p>If you discover that a minor has created an account on Meeplr, please contact us immediately at <a href="mailto:caitlyn.c.nayeli@gmail.com" style="color: #856404; text-decoration: underline;">caitlyn.c.nayeli@gmail.com</a> so we can take swift action to remove the account and prevent future access.</p>
         </div>
         
         <div class="footer">
-            <p>Questions about safety? Contact us at <a href="mailto:safety@meeplr.com">safety@meeplr.com</a></p>
+            <p>Questions about safety? Contact us at <a href="mailto:caitlyn.c.nayeli@gmail.com">caitlyn.c.nayeli@gmail.com</a></p>
             <p style="margin-top: 10px;">
                 <a href="/privacy-policy">Privacy Policy</a> | 
                 <a href="/terms">Terms of Service</a> |
