Update initialization comment for clarity

--- a/password-reset-complete.html
+++ b/password-reset-complete.html
@@ -393,4 +393,8 @@
             }, 2000);
         }
         
-        // Initialize
+        // Initialize on load
+        init();
+    </script>
+</body>
+</html>
